<resources>
    <string name="app_name">Configuracion de Monitor</string>
    <string name="search_devices">Buscar dispositivos</string>
    <string name="update_devices">Actualizar dispositivos</string>
    <string name="stop_devices">Detener busqueda</string>
    <string name="show_paired_devices">Mostrar guardados</string>
    <string name="get_networks">Obtener redes escaneadas</string>
    <string name="get_gps">Obtener coordenadas</string>
    <string name="show_networks">Mostrar redes escaneadas</string>
    <string name="lon">Longitud:</string>
    <string name="lat">Latitud:</string>
    <string name="dir">Dirección:</string>
    <string name="pick_networks">Seleccione una red:</string>
    <string name="input_password">Ingrese una contraseña:</string>
    <string name="send_message">Enviar mensaje</string>
    <string name="sensivility">Sensibilidad</string>
    <string name="measurement_time">Tiempo de muestro</string>

</resources>
